WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83034
[Qt][WK2] ASSERT(!(outputBytes.size() % sizeof(UChar))) in PluginProcessProxyQt.cpp
https://bugs.webkit.org/show_bug.cgi?id=83034
Summary
[Qt][WK2] ASSERT(!(outputBytes.size() % sizeof(UChar))) in PluginProcessProxy...
Balazs Kelemen
Reported
2012-04-03 08:17:47 PDT
The problem is that if the plugin speak into stdout than it confusing our stdout based ipc.
Attachments
Patch
(3.65 KB, patch)
2012-04-03 08:23 PDT
,
Balazs Kelemen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Balazs Kelemen
Comment 1
2012-04-03 08:23:16 PDT
Created
attachment 135332
[details]
Patch
Zoltan Herczeg
Comment 2
2012-04-03 08:42:07 PDT
Comment on
attachment 135332
[details]
Patch r=me
Balazs Kelemen
Comment 3
2012-04-03 08:45:12 PDT
Comment on
attachment 135332
[details]
Patch Clearing flags on attachment: 135332 Committed
r113041
: <
http://trac.webkit.org/changeset/113041
>
Balazs Kelemen
Comment 4
2012-04-03 08:45:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug