[Qt][WK2] ASSERT(!(outputBytes.size() % sizeof(UChar))) in PluginProcessProxyQt.cpp https://bugs.webkit.org/show_bug.cgi?id=83034

Reviewed by Zoltan Herczeg.

Don't allow the plugin to pollute the standard output.
Reinvent StdOutDevNullRedirector which was removed in
r112889 for this purpose.

* Shared/Plugins/Netscape/x11/NetscapePluginModuleX11.cpp:
(StdoutDevNullRedirector):
(WebKit):
(WebKit::StdoutDevNullRedirector::StdoutDevNullRedirector):
(WebKit::StdoutDevNullRedirector::~StdoutDevNullRedirector):
(WebKit::NetscapePluginModule::scanPlugin):

Canonical link: https://commits.webkit.org/100398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113041 268f45cc-cd09-0410-ab3c-d52691b4dbfc